# path-annotate

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
src/: path_annotate.jsonc  path_annotate.py  py_api_inventory.jsonc  py_api_inventory.py
src/codetools/: cli.py  repo_to_markdown.py
src/codetools/annotate/: README.md  path_annotate.jsonc  path_annotate.py
src/codetools/inventory/: README.md  ast_ops.py  config.py  core.py  default.json  models.py  py_api_inventory.py
src/codetools/markdown/: README.md  repo_to_markdown.py  to_markdown.py
src/codetools/shared/repo/: repo_config.py  repo_service.py  tree_node.py
src/codetools/shared/ui/: winx_gui_app.py  winx_tui_app.py
