[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codetools"
version = "1.0.0"
requires-python = ">=3.12"
description = "A Toolkit for Generating and Managing Code Documentation"
readme = "README.md"
authors = [
    { name = "Braxton Bell", email = "bell.braxton@outlook.com" }
]
dependencies = [
    "commentjson>=0.9.0",
    "pathspec>=0.12.0",
    "colorama>=0.4.6",
    "PyYAML>=6.0",
    "windows-curses; sys_platform == 'win32'",
]

# [project.optional-dependencies]

[dependency-groups]
dev = [
    # Core developer workflow
    "pre-commit>=4.4.0",
    "pip-audit>=2.9.0",
    "deptry>=0.24.0",

    # Testing
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/braxton-bell/path-annotate"

### console entry points ###
[project.scripts]
codetools = "codetools.cli:main"
# Optional: Uncomment for dirrect tool access in cli
# annotate = "codetools.annotate.path_annotate:main"
# inventory = "codetools.inventory.py_api_inventory:main"
# markdown = "codetools.markdown.to_markdown:main"

### tool configurations ###
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["codetools*"]
exclude = ["tests*"]

[tool.deptry]
known_first_party = ["codetools"]
per_rule_ignores = { "DEP002" = [
    #ignore windows-cursers
    "windows-curses"
] }

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.git
  |\.venv
)/
'''

### Coverage Configuration ###
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*", 
    "*/site-packages/*"
    ]

### Pytest Configuration ###
[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing", 
]